# EAR_v3

./: Cargo.toml  README.md
SQL_Deploy/: README.md  sql_data.sql
src/: README.md  ear_v3_config.rs  ear_v3_struct.rs  main.rs  misc.rs  wrap_register.rs
src/SQL/: sql_add_user.sql
src/Web02/access/: 404.html  ErrorHandler.html
src/Web02/browse_page/: browse.html  browse_c.css  browse_c.html  browse_detail.css  details.html
src/Web02/email/: regist_email.html
src/Web02/login_page/: login.css  login.html  login.js  md5.js  reset_passwd.html
src/Web02/main_page/: main.css  main.html
src/Web02/regist_page/: emailnote.html  regist.html
src/Web02/user_page/: user_info.css  user_info_d1.html  user_info_d2.html  user_info_d3.html
src/route_handler_fn/: basic_fn.rs  email_send.rs  mod.rs
src/route_handler_fn/book/: basic_fn.rs  browse_c.rs  browse_i.rs  details.rs  mod.rs
src/route_handler_fn/user/: mod.rs  user_div.rs  user_login.rs  user_logout.rs  user_regist.rs
