[package]
name = "ear_v3"
version = "2.1.2"
authors = ["Jessarin000 <kjx52@outlook.com>"]

edition = "2021"
rust-version = "1.84.0"
description = "智能化图书管理系统"
repository = "https://github.com/kjx52/EAR_v3"

license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-session = { version = "0.10.1", features = ["redis-session"] }
captcha = "0.0.9"
chrono = { version = "0.4.39", features = ["now"] }
env_logger = "0.11.6"
json = "0.12.4"
lettre = "0.9"
lettre_email = "0.9"
mime_guess = "2"
mysql = "25.0.1"
openssl = "0.10.71"
rand = "0.9.0"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
sha2 = "0.10.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]